faq overflow fix

--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -65,6 +65,10 @@
   }
 }
 
+.faq__item {
+  max-width: 140px;
+}
+
 .faq__button {
   width: 100%;
   min-height: 46px;
